--- a/src/app/feature/home/home.component.html
+++ b/src/app/feature/home/home.component.html
@@ -1,6 +1,17 @@
 <div class="flex flex-column gap-3">
   <div class="flex gap-2">
-  <button type="button" pButton pRipple (click)="show()" label="Show" class="p-button-success"></button>
-  <p-button (click)="confirm($event)" icon="pi pi-check" label="Confirm"></p-button>
+    <button
+      type="button"
+      pButton
+      pRipple
+      (click)="show()"
+      label="Show"
+      class="p-button-success"
+    ></button>
+    <p-button
+      (click)="confirm($event)"
+      icon="pi pi-check"
+      label="Confirm"
+    ></p-button>
   </div>
 </div>
